# fusion-gateway

./: .gitignore  PROGRESS.md  README.md  pyproject.toml
configs/: gateway.toml  pricing.toml  suite.hard.manifest.json  suite.manifest.json
deploy/: fusion-gateway.service
docs/: BENCHMARK_REPORT.md  DESIGN.md  DISCIPLINES.md  HARD_TIER_REPORT.md  M1_ACCEPTANCE.md  M2A_VALIDATION.md  M3A_PILOT.md  M3B_REPORT.md  POSITIONING.md
docs/adr/: 0001-rewrite-and-topology.md
docs/research/: claude-code-behavioral-evaluation.md
docs/specs/: 2026-07-14-m2a-benchmark-design.md  2026-07-14-m3a-routing-pilot-design.md  2026-07-15-m3b-router-design.md
evaluator/: build_manifest.py  hf_fetchers.py  pilot.py  pricing.py  report.py  runner.py  sampler.py  sandbox.py  store.py  validate.py
evaluator/agentic/: __init__.py  cascade.py  dataset.py  grade.py  pilot.py  records.py  runner.py  verifier.py
evaluator/audit/: disagreements.py  reference_selftest.py  references.py
evaluator/official/: humaneval_exec.py  livecodebench_exec.py  math_grade.py  mmlu_extract.py  prompts.py
evaluator/scorers/: base.py  code.py  math.py  mcq.py
evaluator/suite/: loader.py  manifest.py  types.py
gateway/: app.py  clock.py  config.py  db.py  events.py  ledger.py  policy.py  providers.py
router/: cascade.py  features.py  learnability.py  matrix.py  pareto.py  policy.py  train.py
scripts/: agentic_report.py  deploy.sh  final_numbers.py  hard_report.py  resample_official.py  rollup.py  smoke.py
tests/: helpers.py  test_app.py  test_config.py  test_db.py  test_events.py  test_ledger.py  test_policy.py  test_providers.py  test_rollup.py  test_scaffold.py  test_streaming.py
tests/eval/: test_agentic_cascade.py  test_agentic_dataset.py  test_agentic_grade.py  (+34 more)
(+14 files in other folders)
