[project]
name = "fusion-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gateway"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  # Third-party: Starlette's TestClient warns about the bundled httpx version.
  # Not our code; silence so our own test output stays pristine.
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
