[project]
name = "fusion-gateway"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
eval = ["litellm>=1.40", "datasets>=2.19", "sympy>=1.12", "scikit-learn>=1.3"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gateway", "evaluator", "evaluator.suite", "evaluator.scorers", "router"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so tests can `from scripts.X import ...` and
# `from evaluator...` under a bare `pytest` invocation, not only `python -m pytest`.
pythonpath = ["."]
filterwarnings = [
  # Third-party: Starlette's TestClient warns about the bundled httpx version.
  # Not our code; silence so our own test output stays pristine.
  "ignore:Using .httpx. with .starlette.testclient. is deprecated",
]
